# polar_code

./: AGENTS.md  COMPARE_BER.md  README.md  crc_polar_ofdm_ls.py  crc_polar_vs_uncoded.py  ofdm_channel_estimation.py  pyproject.toml
checkpoints/: beta_M1.npy  beta_M2.npy  beta_M4.npy  beta_M8.npy
data/: train_M1_snr5_seed0_part0.npz  train_M2_snr5_seed0_part0.npz  train_M4_snr5_seed0_part0.npz  train_M8_snr5_seed0_part0.npz
dl_scl_polar/: __init__.py  config.py
dl_scl_polar/dlscl/: beta.py  flip.py
dl_scl_polar/eval/: opcount.py  run_ber_sweep.py  run_fer_sweep.py
dl_scl_polar/nr/ldpc/: __init__.py  basegraphs.py  builder.py  decode_nms.py  encode.py  rate_match.py
dl_scl_polar/nr/polar/: __init__.py  interleaver.py  rate_match.py  scl_nr.py
dl_scl_polar/polar/: crc.py  polar.py  scl.py
dl_scl_polar/train/: make_dataset.py  train_beta.py
dl_scl_polar/utils/: seeding.py
logs/: train_M1.csv  train_M2.csv  train_M4.csv  train_M8.csv
results/: fer_M1.csv  fer_M2.csv  fer_M4.csv  fer_M8.csv  opcount_M4.csv
tests/: test_ber_eval.py  test_beta_symmetry.py  test_cli_end2end.py  test_flip_logic.py  test_nr_ldpc.py  test_nr_polar.py  test_polar_basics.py  test_scl_crc.py
